// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconWithLabel renders correctly 1`] = `
<IconWithLabel
  icon=""
  label=""
>
  <styled.div
    m={2}
  >
    <div
      className="sc-bwzfXH eYmfyk"
    >
      <Row
        center="xs"
      >
        <div
          className="Row__Row-kNtYPA jaQNpG"
        >
          <Col
            xs={true}
          >
            <div
              className="Col__Col-hCQanm fvDNJi"
            >
              <Row>
                <div
                  className="Row__Row-kNtYPA bvOcuL"
                >
                  <Styled(Paper)
                    circle={true}
                  >
                    <Paper
                      circle={true}
                      className="sc-bdVaJa fGDlZB"
                      rounded={true}
                      transitionEnabled={true}
                      zDepth={1}
                    >
                      <div
                        className="sc-bdVaJa fGDlZB"
                        style={
                          Object {
                            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                            "backgroundColor": "#ffffff",
                            "borderRadius": "50%",
                            "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                                   0 1px 4px rgba(0, 0, 0, 0.12)",
                            "boxSizing": "border-box",
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "Roboto, sans-serif",
                            "muiPrepared": true,
                            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                          }
                        }
                      />
                    </Paper>
                  </Styled(Paper)>
                  <styled.div
                    px={1}
                  >
                    <div
                      className="sc-bwzfXH cHqcyU"
                    >
                      <Styled(Component)
                        tag="p"
                      >
                        <Component
                          className="sc-htpNat iEBsLl"
                          tag="p"
                        >
                          <p
                            className="sc-htpNat iEBsLl"
                          />
                        </Component>
                      </Styled(Component)>
                    </div>
                  </styled.div>
                </div>
              </Row>
            </div>
          </Col>
        </div>
      </Row>
    </div>
  </styled.div>
</IconWithLabel>
`;

exports[`IconWithLabel renders with icon pops 1`] = `
<IconWithLabel
  icon={<FaEnvelope />}
  label=""
>
  <styled.div
    m={2}
  >
    <div
      className="sc-bwzfXH eYmfyk"
    >
      <Row
        center="xs"
      >
        <div
          className="Row__Row-kNtYPA jaQNpG"
        >
          <Col
            xs={true}
          >
            <div
              className="Col__Col-hCQanm fvDNJi"
            >
              <Row>
                <div
                  className="Row__Row-kNtYPA bvOcuL"
                >
                  <Styled(Paper)
                    circle={true}
                  >
                    <Paper
                      circle={true}
                      className="sc-bdVaJa fGDlZB"
                      rounded={true}
                      transitionEnabled={true}
                      zDepth={1}
                    >
                      <div
                        className="sc-bdVaJa fGDlZB"
                        style={
                          Object {
                            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                            "backgroundColor": "#ffffff",
                            "borderRadius": "50%",
                            "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                                   0 1px 4px rgba(0, 0, 0, 0.12)",
                            "boxSizing": "border-box",
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "Roboto, sans-serif",
                            "muiPrepared": true,
                            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                          }
                        }
                      >
                        <FaEnvelope>
                          <IconBase
                            viewBox="0 0 40 40"
                          >
                            <svg
                              fill="currentColor"
                              height="1em"
                              preserveAspectRatio="xMidYMid meet"
                              style={
                                Object {
                                  "color": undefined,
                                  "verticalAlign": "middle",
                                }
                              }
                              viewBox="0 0 40 40"
                              width="1em"
                            >
                              <g>
                                <path
                                  d="m40 15.8v17.8q0 1.4-1 2.5t-2.6 1h-32.8q-1.5 0-2.6-1t-1-2.5v-17.8q1 1.1 2.3 2 8 5.5 11 7.7 1.3 0.9 2.1 1.5t2.1 1 2.5 0.6h0q1.2 0 2.5-0.6t2.1-1 2.1-1.5q3.7-2.8 11.1-7.7 1.2-0.9 2.2-1.9z m0-6.5q0 1.7-1.1 3.4t-2.7 2.7q-8.4 5.8-10.5 7.3-0.2 0.1-0.9 0.6t-1.2 0.9-1.2 0.7-1.3 0.6-1.1 0.2h0q-0.5 0-1.1-0.2t-1.3-0.6-1.2-0.7-1.2-0.9-0.9-0.6q-2.1-1.5-5.9-4.1t-4.6-3.2q-1.3-0.9-2.6-2.6t-1.2-3q0-1.8 0.9-2.9t2.7-1.2h32.8q1.5 0 2.5 1.1t1.1 2.5z"
                                />
                              </g>
                            </svg>
                          </IconBase>
                        </FaEnvelope>
                      </div>
                    </Paper>
                  </Styled(Paper)>
                  <styled.div
                    px={1}
                  >
                    <div
                      className="sc-bwzfXH cHqcyU"
                    >
                      <Styled(Component)
                        tag="p"
                      >
                        <Component
                          className="sc-htpNat iEBsLl"
                          tag="p"
                        >
                          <p
                            className="sc-htpNat iEBsLl"
                          />
                        </Component>
                      </Styled(Component)>
                    </div>
                  </styled.div>
                </div>
              </Row>
            </div>
          </Col>
        </div>
      </Row>
    </div>
  </styled.div>
</IconWithLabel>
`;

exports[`IconWithLabel renders with label props 1`] = `
<IconWithLabel
  icon=""
  label="info@mokahaiku.com"
>
  <styled.div
    m={2}
  >
    <div
      className="sc-bwzfXH eYmfyk"
    >
      <Row
        center="xs"
      >
        <div
          className="Row__Row-kNtYPA jaQNpG"
        >
          <Col
            xs={true}
          >
            <div
              className="Col__Col-hCQanm fvDNJi"
            >
              <Row>
                <div
                  className="Row__Row-kNtYPA bvOcuL"
                >
                  <Styled(Paper)
                    circle={true}
                  >
                    <Paper
                      circle={true}
                      className="sc-bdVaJa fGDlZB"
                      rounded={true}
                      transitionEnabled={true}
                      zDepth={1}
                    >
                      <div
                        className="sc-bdVaJa fGDlZB"
                        style={
                          Object {
                            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                            "backgroundColor": "#ffffff",
                            "borderRadius": "50%",
                            "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                                   0 1px 4px rgba(0, 0, 0, 0.12)",
                            "boxSizing": "border-box",
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "Roboto, sans-serif",
                            "muiPrepared": true,
                            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                          }
                        }
                      />
                    </Paper>
                  </Styled(Paper)>
                  <styled.div
                    px={1}
                  >
                    <div
                      className="sc-bwzfXH cHqcyU"
                    >
                      <Styled(Component)
                        tag="p"
                      >
                        <Component
                          className="sc-htpNat iEBsLl"
                          tag="p"
                        >
                          <p
                            className="sc-htpNat iEBsLl"
                          >
                            info@mokahaiku.com
                          </p>
                        </Component>
                      </Styled(Component)>
                    </div>
                  </styled.div>
                </div>
              </Row>
            </div>
          </Col>
        </div>
      </Row>
    </div>
  </styled.div>
</IconWithLabel>
`;
